--- a/photo/index.html
+++ b/photo/index.html
@@ -27,119 +27,119 @@
 			</div>
 		</figure>
 		<figure>
-			<img src="./IMG_20240708_195947.jpg">
+			<img src=".https://imgbed.mengnankk.asiaIMG_20240708_195947.jpg">
 			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
-			<img src="./IMG_20240708_200104.jpg">
+			<img src="https://imgbed.mengnankk.asia/IMG_20240708_200104.jpg">
 			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
-			<img src="./IMG_20240708_200314.jpg">
+			<img src="https://imgbed.mengnankk.asia/IMG_20240708_200314.jpg">
 			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
-			<img src="./IMG_20240708_200213.jpg">
+			<img src="https://imgbed.mengnankk.asia/IMG_20240708_200213.jpg">
 			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
-			<img src="./IMG_20240708_200138.jpg">
+			<img src="https://imgbed.mengnankk.asia/IMG_20240708_200138.jpg">
 			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
-			<img src='./IMG_20240708_191425.jpg' alt='clouds and sky during daytime' title="Photo by Diego PH for Unsplash">
+			<img src='https://imgbed.mengnankk.asia/IMG_20240708_191425.jpg' alt='clouds and sky during daytime' title="Photo by Diego PH for Unsplash">
 			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720154453.jpg" alt="white clouds and blue sky. " title="Photo by Carlos Kenobi for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154453.jpg" alt="white clouds and blue sky. " title="Photo by Carlos Kenobi for Unsplash">
 			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720154508.jpg" alt="cloudy sky. " title="Photo by Alex Machado for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154508.jpg" alt="cloudy sky. " title="Photo by Alex Machado for Unsplash">
 			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720154513.jpg" alt="rainbow during daytime. " title="Photo by Yulia Gadalina for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154513.jpg" alt="rainbow during daytime. " title="Photo by Yulia Gadalina for Unsplash">
 			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720154517.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154517.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720154521.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154521.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720154525.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154525.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720154933.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154933.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720154935.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154935.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720154938.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154938.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720155706.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720155706.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Jinan</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720155709.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720155709.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Jinan</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720155927.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720155927.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Jinan</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720155931.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720155931.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Jinan</figcaption>
 		</figure>
 		<figure>
-			<img src="./微信图片_20240720155927.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/微信图片_20240720155927.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Jinan</figcaption>
 		</figure>
 		<figure>
-			<img src="./QQ图片20240720160548.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/QQ图片20240720160548.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Wuhan</figcaption>
 		</figure>
 		<figure>
-			<img src="./QQ图片20240720160545.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/QQ图片20240720160545.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Wuhan</figcaption>
 		</figure>
 		<figure>
-			<img src="./QQ图片20240720160532.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/QQ图片20240720160532.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Wuhan</figcaption>
 		</figure>
 		<figure>
-			<img src="./QQ图片20240720161754.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/QQ图片20240720161754.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="./QQ图片20240720161800.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/QQ图片20240720161800.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Beijing</figcaption>
 		</figure>
 		<figure>
-			<img src="./QQ图片20240720161804.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/QQ图片20240720161804.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>Beijing</figcaption>
 		</figure>
 		<figure>
-			<img src="./QQ图片20240720161807.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/QQ图片20240720161807.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>Beijing</figcaption>
 		</figure>
 		<figure>
-			<img src="./QQ图片20240720161810.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/QQ图片20240720161810.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Tianjin</figcaption>
 		</figure>
 		<figure>
-			<img src="./QQ图片20240720161812.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<img src="https://imgbed.mengnankk.asia/QQ图片20240720161812.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Hefei</figcaption>
 		</figure>
 		
