--- a/photo/index.html
+++ b/photo/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="zh">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,143 +9,150 @@
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
     <link rel="stylesheet" href="./text.css">
+    <link rel="icon" type="image/x-icon" href="https://imgbed.mengnankk.asia/202407101803086.jpg">
     <script src="./test.js"></script>
     <title>获奖&&日常</title>
 </head>
-<main>
-	<div id="gallery">
-		<figure>
-			<img src="./IMG_20240708_175100.jpg">
-			<figcaption>奖项</figcaption>
-		</figure>
-		<figure>
-			<div>
-				<div>
-					<h2>奖项和比赛</h2>
-					<p>时光!</p>
-					<p><br><small>☺ : <br><a target="_blank" href="../index.html">Back index</a></small></p>
-				</div>
-			</div>
-		</figure>
-		<figure>
-			<img src=".https://imgbed.mengnankk.asiaIMG_20240708_195947.jpg">
-			<figcaption>奖项</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/IMG_20240708_200104.jpg">
-			<figcaption>奖项</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/IMG_20240708_200314.jpg">
-			<figcaption>奖项</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/IMG_20240708_200213.jpg">
-			<figcaption>奖项</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/IMG_20240708_200138.jpg">
-			<figcaption>奖项</figcaption>
-		</figure>
-		<figure>
-			<img src='https://imgbed.mengnankk.asia/IMG_20240708_191425.jpg' alt='clouds and sky during daytime' title="Photo by Diego PH for Unsplash">
-			<figcaption>奖项</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154453.jpg" alt="white clouds and blue sky. " title="Photo by Carlos Kenobi for Unsplash">
-			<figcaption>in Nanjing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154508.jpg" alt="cloudy sky. " title="Photo by Alex Machado for Unsplash">
-			<figcaption>in Nanjing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154513.jpg" alt="rainbow during daytime. " title="Photo by Yulia Gadalina for Unsplash">
-			<figcaption>in Nanjing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154517.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Nanjing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154521.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Nanjing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154525.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Nanjing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154933.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Nanjing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154935.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Nanjing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720154938.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Nanjing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720155706.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Jinan</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720155709.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Jinan</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720155927.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Jinan</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720155931.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Jinan</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/微信图片_20240720155927.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Jinan</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/QQ图片20240720160548.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Wuhan</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/QQ图片20240720160545.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Wuhan</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/QQ图片20240720160532.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Wuhan</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/QQ图片20240720161754.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Nanjing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/QQ图片20240720161800.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Beijing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/QQ图片20240720161804.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>Beijing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/QQ图片20240720161807.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>Beijing</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/QQ图片20240720161810.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Tianjin</figcaption>
-		</figure>
-		<figure>
-			<img src="https://imgbed.mengnankk.asia/QQ图片20240720161812.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>in Hefei</figcaption>
-		</figure>
-		
-	</div>
-</main>
-
-<footer id='info'>Codepen by <a target="_blank" href="../index.html">SkyMirror</a></footer>
+<body>
+    <main>
+        <div id="gallery">
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201714198.jpg" alt="奖项">
+                <figcaption>奖项</figcaption>
+            </figure>
+            <figure>
+                <div>
+                    <div>
+                        <h2>奖项和比赛</h2>
+                        <p>时光!</p>
+                        <p><br><small>☺ : <br><a target="_blank" href="../index.html">Back index</a></small></p>
+                    </div>
+                </div>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201714201.jpg" alt="奖项">
+                <figcaption>奖项</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201714200.jpg" alt="奖项">
+                <figcaption>奖项</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201714199.jpg" alt="奖项">
+                <figcaption>奖项</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201714197.jpg" alt="奖项">
+                <figcaption>奖项</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201714196.jpg" alt="奖项">
+                <figcaption>奖项</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201714195.jpg" alt="云和天空" title="Photo by Diego PH for Unsplash">
+                <figcaption>奖项</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715168.jpg" alt="白云和蓝天" title="Photo by Carlos Kenobi for Unsplash">
+                <figcaption>in Nanjing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715167.jpg" alt="多云的天空" title="Photo by Alex Machado for Unsplash">
+                <figcaption>in Nanjing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715169.jpg" alt="白天的彩虹" title="Photo by Yulia Gadalina for Unsplash">
+                <figcaption>in Nanjing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715170.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Nanjing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715171.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Nanjing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715172.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Nanjing</figcaption>
+            </figure>
+            <figure>
+                <img src="./微信图片_20240720154933.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Nanjing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715173.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Nanjing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715174.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Nanjing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715176.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Jinan</figcaption>
+            </figure>
+            <figure>
+                <img src="./微信图片_20240720155709.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Jinan</figcaption>
+            </figure>
+            <figure>
+                <img src="./微信图片_20240720155927.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Jinan</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715835.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Jinan</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715834.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Jinan</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715536.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Wuhan</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715535.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Wuhan</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715670.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Wuhan</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715173.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Nanjing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715673.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Beijing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715672.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Beijing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715674.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Beijing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715668.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Tianjin</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407201715669.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Hefei</figcaption>
+            </figure>
+        </div>
+    </main>
+    <footer id='info'>Codepen by <a target="_blank" href="../index.html">SkyMirror</a></footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.js"></script>
+    <script>
+        baguetteBox.run('#gallery');
+    </script>
+</body>
 </html>
